--- a/main.tex
+++ b/main.tex
@@ -44,10 +44,10 @@
   bookmarksnumbered=true,
   hidelinks,
   colorlinks=true,
-  linkcolor=blue,
-  anchorcolor=blue,
-  citecolor=blue,
-  urlcolor=blue,
+  linkcolor=green,
+  anchorcolor=green,
+  citecolor=green,
+  urlcolor=green,
   pdftitle={Data security},
   pdfauthor={Fuck you},
   pdfsubject={Fuck you},
