--- a/sections/4.tex
+++ b/sections/4.tex
@@ -3,5 +3,20 @@
 
 \begin{document}
 \section{总结与发展趋势}
+我们基于生成对抗网络（GAN）在联邦学习中设计了一种投毒攻击。
+成功实施攻击的关键是在攻击者端部署一个 GAN 架构，
+这个架构可以模仿其他参与者的训练数据集中的样本。
+只要共享模型的准确性随着时间的推移得到提高，这个 GAN 的有效性就可以得到极大的保证，
+这也是联邦学习的主要思想。此外，基于 GAN 的生成模型无法被检测到，
+因为攻击者假装是联邦学习协议中的诚实参与者。
+因此，这里提出的投毒攻击的有效性可以得到保证。
+
+此外，现有的投毒攻击防御机制，如鲁棒损失和异常检测，
+都不适用于联邦学习，因为它们都需要检测器访问参与者的训练数据和训练模型，
+这与联邦学习的设计思想相矛盾。至于防御方面，
+由于这里的投毒攻击依赖于 GAN 来模仿其他参与者的训练数据，
+因此可以设计一种新的联邦学习框架，该框架隐藏全局模型的分类结果，
+以防止攻击者使用 GAN 获取其他参与者的私有训练数据，
+并最终防范内部参与者发起的投毒攻击。
 %
 \end{document}
