--- a/sections/5.tex
+++ b/sections/5.tex
@@ -2,11 +2,33 @@
 \graphicspath{{\subfix{../figures/}}}
 
 \begin{document}
-\section{参考文献}
 %[1] 中 国 互 联 网 协 会 2006 年第一次反垃圾邮件调查结
 %果.http://www.anti-spam.cnlShowArticle.php?id=2713
 %[2] 曹麒麟，张千里.垃圾邮件与反垃圾邮件技术[M].北京:人民邮电出版社，2003.
 %[3] 罗改龙.基于 SPI 的防火墙的研究与实现[硕士学位论文].武汉:武汉理工大学，2007
 %[4] 周茜，赵明生.中文文本分类中的特征选择研究[J].中文信息学报,2003,Vol.18 No.3
+\begin{thebibliography}{0000}
+  \bibitem{Jiale-Zhang-2019}
+    \newblock Jiale Zhang, Junjun Chen, Di Wu, Bing Chen, and Shui Yu.
+    \newblock \emph{Poisoning Attack in Federated Learning using Generative Adversarial Nets},
+    \newblock 2019.
+  %
+  \bibitem{QYang-2019}
+    \newblock Q. Yang, Y. Liu, T. Chen, and Y. Tong.
+    \newblock \emph{Federated Machine Learning: Concept and Applications},
+    \newblock ACM Transactions on Intelligent Systems and Technology., vol.10, no.2, pp. 1-19,
+    \newblock Jan. 2019.
+  %
+  \bibitem{Biggio}
+    \newblock B. Biggio, B. Nelson, and P. Laskov.
+    \newblock \emph{Poisoning Attacks against Support Vector Machines},
+    \newblock in Proc. 29th International Conference on Machine Learning. (ICML), Edinburgh, Scotland,
+    \newblock Jun. 2012, pp. 18071814.
+  %
+  \bibitem{X-Chen}
+    \newblock X. Chen, C. Liu, B. Li, K. Lu, and D. Song.
+    \newblock \emph{Targeted Backdoor Attacks on Deep Learning Systems Using Data Poisoning},
+    \newblock 2017.
+\end{thebibliography}
 %
 \end{document}
